# xwing-kem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  KNOWN-GAPS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_functional.py  02_class.py  03_backend_selection.py  04_encrypt_message.py  README.md
src/xwing_kem/: __init__.py  _backend.py  _core.py
tests/: test_kat.py  test_xwing.py  xwing_kat.json  xwing_kat.json.template
