[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xwing-kem"
version = "0.2.0"
description = "X-Wing hybrid KEM for Python (X25519 + ML-KEM-768), per draft-connolly-cfrg-xwing-kem"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Paul Clark", email = "paul@systemslibrarian.dev" }]
keywords = [
    "post-quantum",
    "cryptography",
    "kem",
    "x-wing",
    "ml-kem",
    "kyber",
    "x25519",
    "hybrid",
    "pqc",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    # ML-KEM-768 lands natively in cryptography 48.0.0 (when the wheel is
    # built against OpenSSL 3.5+/AWS-LC/BoringSSL). X25519 is always present.
    "cryptography>=48.0.0",
]

[project.optional-dependencies]
# Fallback ML-KEM backend for wheels whose OpenSSL build lacks PQC.
liboqs = ["liboqs-python>=0.12.0"]
dev = ["pytest>=8.0", "build", "twine"]

[project.urls]
Homepage = "https://github.com/systemslibrarian/xwing-kem"
Repository = "https://github.com/systemslibrarian/xwing-kem"
Issues = "https://github.com/systemslibrarian/xwing-kem/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/xwing_kem"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
